--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@
 }
 
 body {
-  background-image: url(/newsite/img/background.png);
+  background-image: url(../img/background.png);
 }
 
 img {
@@ -32,12 +32,16 @@ img {
 h1 {
   margin: 0;
   font-size: 30px;
+  border-style:solid;
+  border-width: 0 0 2px 0;
 }
 
 h2 {
   margin: 0;
   margin-top: 40px;
   font-size: 30px;
+  border-style:solid;
+  border-width: 0 0 2px 0;
 }
 
 p {
@@ -53,11 +57,27 @@ iframe {
   border:0;
 }
 
+#floating-me {
+  z-index: -1;
+  position: fixed;
+  width: 100%;
+  top: 50vh;
+}
+
+#floating-me img {
+  width: 100px;
+  -webkit-animation:spin 8s linear infinite;
+}
+
+@-webkit-keyframes spin { 
+  100% { -webkit-transform: rotate(360deg); } 
+}
+
 #body-container {
   display: grid;
   width: 1000px;
   height: 900px;
-  grid-template-columns: 88px 5fr 1fr;
+  grid-template-columns: 88px 5fr 100px;
   grid-template-rows: 100px 1fr 10fr;
   grid-template-areas:
   "left header right"
@@ -73,13 +93,20 @@ iframe {
   background-color: var(--woke);
   display: flex;
   flex-direction: column;
-  image-rendering: crisp-edges;
+
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
+#left a:hover {
+  filter:brightness(0.5);
 }
 
 #header {
   grid-area: header;
-  background-image: url(/newsite/img/headerbg.png);
-  background-position: 0px -100px;
+  background-image: url(../img/logonew.png);
+  background-size: cover;
 
   display: flex;
   justify-content: space-between;
@@ -93,7 +120,7 @@ iframe {
 
   max-height: 100px;
   border-style: solid;
-  border-width: 4px;
+  border-width: 4px 0px 4px 0px;
   border-color: var(--dakotagolden);
 }
 
@@ -125,10 +152,10 @@ iframe {
   color: var(--dakotagolden);
   font-size: 30px;
   padding: 20px;
-}
 
-#body img {
-  max-width: 300px;
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-color: black black;
 }
 
 #right {
@@ -137,14 +164,22 @@ iframe {
   display: flex;
   flex-direction: column;
   background-color: var(--dakotagolden);
+
+  overflow: scroll;
+  overflow-x: hidden;
+  scrollbar-width: none;
 }
 
 #right img {
   width: 100%;
 }
 
+#right a:hover {
+  filter: brightness(0.7);
+}
+
 #right p {
-  background-image: url(/newsite/img/ads.png);
+  background-image: url(../img/ads.png);
   background-size: cover;
   font-size: 10px;
   color: black;
