--- a/css/index.css
+++ b/css/index.css
@@ -51,12 +51,6 @@ p {
   font-size: 20px;
 }
 
-iframe {
-  padding: 0;
-  margin: 0;
-  border:0;
-}
-
 #floating-me {
   z-index: -1;
   position: fixed;
@@ -76,9 +70,10 @@ iframe {
 #body-container {
   display: grid;
   width: 1000px;
-  height: 900px;
+  min-height: 900px;
+  max-height: 100%;
   grid-template-columns: 88px 5fr 100px;
-  grid-template-rows: 100px 1fr 10fr;
+  grid-template-rows: 100px 75px 10fr;
   grid-template-areas:
   "left header right"
   "left links right"
@@ -90,7 +85,7 @@ iframe {
 
 #left {
   grid-area: left;
-  background-color: var(--woke);
+  background-color: var(--dakotagolden);
   display: flex;
   flex-direction: column;
 
@@ -118,7 +113,6 @@ iframe {
   display: flex;
   justify-content: space-evenly;
 
-  max-height: 100px;
   border-style: solid;
   border-width: 4px 0px 4px 0px;
   border-color: var(--dakotagolden);
@@ -151,7 +145,7 @@ iframe {
 
   color: var(--dakotagolden);
   font-size: 30px;
-  padding: 20px;
+  padding: 30px;
 
   overflow: scroll;
   overflow-x: hidden;
@@ -160,10 +154,10 @@ iframe {
 
 #right {
   grid-area: right;
-  background-color: var(--woke);
+  background-color: var(--dakotagolden);
   display: flex;
   flex-direction: column;
-  background-color: var(--dakotagolden);
+
 
   overflow: scroll;
   overflow-x: hidden;
