--- a/css/index.css
+++ b/css/index.css
@@ -44,11 +44,24 @@ h2 {
   border-width: 0 0 2px 0;
 }
 
+h3 {
+  margin: 0;
+  font-style: italic;
+  font-size: 30px;
+}
+
 p {
   margin: 0;
   line-height: 1.5;
 
   font-size: 20px;
+}
+
+li {
+  font-size: 20px;
+  background-color: var(--dakotagolden);
+  color: var(--woke);
+  padding-left: 10px;
 }
 
 #floating-me {
