--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 :root {
   --dakotagolden: rgb(254, 183, 59);
+  --dakotagoldenlist: rgb(240, 151, 50);
   --darkdakotagolden: rgb(196, 84, 20);
 
   --kayurple: rgb(168, 40, 248);
@@ -12,6 +13,7 @@
   --woke: rgb(0, 13, 12);
 }
 
+
 .no-interpolation {
   image-rendering: crisp-edges;
 }
@@ -19,10 +21,35 @@
 * {
   box-sizing: border-box;
   font-family: "Noto Sans", sans-serif;
+
 }
 
 body {
+  position: relative;
+  margin: 0;
   background-image: url(../img/background.png);
+
+}
+
+.inverted {
+  filter: invert(1);
+}
+
+.nonInverted {
+  filter: invert(0);
+}
+
+body::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom:0;
+  left: 0;        
+  z-index: -1;     
+
+
+  height: 100%;
 }
 
 img {
@@ -38,7 +65,7 @@ h1 {
 
 h2 {
   margin: 0;
-  margin-top: 40px;
+  margin-top: 30px;
   font-size: 30px;
   border-style:solid;
   border-width: 0 0 2px 0;
@@ -61,7 +88,14 @@ li {
   font-size: 20px;
   background-color: var(--dakotagolden);
   color: var(--woke);
-  padding-left: 10px;
+
+  padding: 4px 0px 4px 10px;
+
+  list-style: square inside;
+}
+
+li:nth-child(even)  {
+  background-color: var(--dakotagoldenlist);
 }
 
 #floating-me {
@@ -85,8 +119,8 @@ li {
   width: 1000px;
   min-height: 900px;
   max-height: 100%;
-  grid-template-columns: 88px 5fr 100px;
-  grid-template-rows: 100px 75px 10fr;
+  grid-template-columns: 88px 1fr 100px;
+  grid-template-rows: 100px 75px 1fr;
   grid-template-areas:
   "left header right"
   "left links right"
@@ -159,10 +193,6 @@ li {
   color: var(--dakotagolden);
   font-size: 30px;
   padding: 30px;
-
-  overflow: scroll;
-  overflow-x: hidden;
-  scrollbar-color: black black;
 }
 
 #right {
@@ -206,3 +236,23 @@ li {
   width: 5vw;
   height: 100%;
 }
+
+#lights {
+  width: 120%;
+  margin: 30px 0 -40px -30px;
+}
+
+#filter-button {
+
+  width: 100%;
+
+  height: 40px;
+  max-height: 40px;
+
+  background-color: black;
+  color: var(--dakotagolden);
+  font-size: large;
+  font-weight: 800;
+  border-color: var(--dakotagolden);
+}
+
