--- a/css/works.css
+++ b/css/works.css
@@ -32,25 +32,38 @@
   display: grid;
   background-color: black;
 
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-columns: 200px 1fr;
+  grid-template-rows: 1fr 3fr;
+
   grid-template-areas: 
   "game-img game-title"
   "game-img game-subtitle";
+
+  margin-top: 25px;
 }
 
 .game-image {
-  grid-area: "game-img";
+  grid-area: game-img;
 }
 
 .game-image img {
-  width: 200px;
+  width: 100%;
+}
+
+.game-image a:hover {
+  filter:brightness(0.5);
 }
 
 .game-title {
-  grid-area: "game-title";
+  grid-area: game-title;
+
+  color: black;
+
+  padding-left: 10px;
 }
 
 .game-subtitle {
-  grid-area: "game-subtitle";
+  padding-left: 10px;
+  grid-area: game-subtitle;
+  font-size: 20px;
 }
