--- a/css/listenlog.css
+++ b/css/listenlog.css
@@ -1,6 +1,111 @@
 body {
+  font-family: "Roboto", sans-serif;
   position: relative;
   margin: 0;
   background-image: url(../img/background.png);
+
+  color: white;
+  font-size: 20px;
+}
+
+h1 {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+
+  font-size: 30px;
+ 
+}
+
+a {
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  color: yellow;
+}
+
+a:visited {
+  color: yellow;
+}
+
+#body-container {
+  margin: 0 auto;
+  margin-top: 10px;
+
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 750px;
+  
+  border: 5px white solid;
+  padding: 20px;
+  background-color: black;
+}
+
+#intro {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#white-bar {
+  background-color: rgb(255, 255, 255);
+  height: 5px;
+  margin: 5px 0 5px 0;
+}
+
+.music-block {
+  display: flex;
+  margin: 0 auto;
+  margin-top: 10px;
+
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 750px;
+  
+  border: 5px white solid;
+  padding: 20px;
+  background-color: black;
+}
+
+.info-block {
+  border-right: 5px white solid;
+  padding-right: 10px;
+}
+
+.album-image img {
+  width: 200px;
+}
+
+.description-box {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+
+  text-align: start;
+  overflow-y: scroll;
+
+  height: 300px;
+}
+
+.description-box p {
+  margin: 0;
+
+}
+
+#go-back {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  margin-bottom: 20px;
+}
+
+#go-back a {
+  color: black;
+}
+
+#music-body-container {
 
 }
