--- a/css/gallery.css
+++ b/css/gallery.css
@@ -53,13 +53,14 @@
 
 .gallery-column img {
   max-width: 26.2vw;
-  padding: 5px;
 }
 
 .image-block {
   position: relative;
   transition: all .1s ease;
   text-shadow: 1px 1px 2px rgb(0, 0, 0);
+
+  margin-bottom: -6px;
 }
 
 .image-block h1 {
