--- a/firebreak/css/style.css
+++ b/firebreak/css/style.css
@@ -5,6 +5,8 @@
 
   --ac-color: #5C5047;
   --ac-color-light: #aa988a;
+  
+  --fbc-yellow: #FFAF00;
 }
 
 #page-container {
@@ -12,6 +14,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  min-width: 800px;
 }
 
 
@@ -20,6 +24,10 @@
   font-size: 40px;
   font-weight: 1000;
   padding:20px;
+}
+
+#title-container img {
+  width: 300px;
 }
 
 body {
@@ -55,12 +63,12 @@ body {
 }
 
 #randomize-button button {
-  background-color: var(--ac-color-light);
+  background-color: var(--fbc-yellow);
   color: var(--bg-color-dark);
 
   border: solid;
   border-width: 2px;
-  border-color: var(--ac-color-light);
+  border-color: var(--fbc-yellow);
   border-radius: 4px;
 
   width: 150px;
@@ -76,6 +84,7 @@ body {
 
   color: var(--ac-color-light);
   background-color: var(--bg-color);
+  border-color: var(--bg-color);;
 }
 
 #randomize-button button:active {
@@ -93,7 +102,7 @@ body {
 
 .loadout-header {
   display: flex;
-  background-color: var(--ac-color-light);
+  background-color: var(--fbc-yellow);
   width: 100%;
   height: 50px;
 }
@@ -146,4 +155,8 @@ h1 {
 
 #disclaimer-container p {
   margin: 0;
+}
+
+#disclaimer-container span {
+  color: var(--fbc-yellow)
 }
